show images again

--- a/app/views/alchemy/elements/_article_view.html.slim
+++ b/app/views/alchemy/elements/_article_view.html.slim
@@ -1,5 +1,5 @@
 - cache(element) do
   = element_view_for(element) do |el|
     h1       = el.render :headline
-    / .picture = el.render :picture
+    .picture = el.render :picture
     .text    = el.render :text
