team page css update

--- a/app/assets/stylesheets/alchemy/elements/team_member.sass
+++ b/app/assets/stylesheets/alchemy/elements/team_member.sass
@@ -8,16 +8,17 @@
 //      height: 10em
 //  .name
 //    font-weight: bold
-.team-member.media
-  .media-left
-    width: 100px
-    height: 100px
-    overflow: hidden
-    img
-      width: 100px
-      //height: 100px
-      margin: 0 0 -35px 0
-  .media-body
-    width: 80%
-    p
-      margin: 0
+.team-member
+  margin-bottom: 3em
+  &.media
+    .media-left
+      width: 10em
+      height: 100px
+      overflow: hidden
+      img
+        width: 6em
+        margin: 0 0 -3em 0
+    .media-body
+      width: 80%
+      p
+        margin: 0
