--- a/app/views/alchemy/elements/_team_member_view.html.slim
+++ b/app/views/alchemy/elements/_team_member_view.html.slim
@@ -1,23 +1,8 @@
 - cache(element) do
-  = element_view_for(element, class: 'media team-member') do |el|
-    .media-left
-      = el.render :picture, {}, { class: 'media-object' }
-    .media-body
-      h4 class="media-heading" = el.render :name
-      p = el.render :position
-      p = el.render :phone
-      p = el.render :email
-
-    / .row
-      .col-md-4
-        .image = el.render :picture
-      .col-md-6
-        .employee-name     = el.render :name
-        .employee-position = el.render :position
-        .employee-phone    = el.render :phone
-        .employee-email    = el.render :email
-    / .image = el.render :picture
-    / .name = el.render :name
-    / .position = el.render :position
-    / .phone = el.render :phone
-    / .email = el.render :email
+  = element_view_for(element, class: 'team-member') do |el|
+    .image = el.render :picture
+    .text
+      label.employee-name = el.render :name
+      .employee-position  = el.render :position
+      .employee-phone     = el.render :phone
+      .employee-email     = el.render :email
