page sub nav as bs nav element

--- a/app/views/alchemy/page_layouts/_standard.html.slim
+++ b/app/views/alchemy/page_layouts/_standard.html.slim
@@ -4,4 +4,4 @@
     .col-md-8
       = render_elements
     .col-md-4
-      = render_navigation from_page:@page
+      = render_navigation({ from_page: @page }, { class: 'nav' })
