new nav with params switch

--- a/app/views/layouts/external/_navigation.html.slim
+++ b/app/views/layouts/external/_navigation.html.slim
@@ -13,7 +13,7 @@ nav.navbar.navbar-default.navbar-fixed-top
 
     #navbar-collapse.collapse.navbar-collapse
       / - if Alchemy::Page.find_by( name: 'Startseite').children.published.any?
-      - if current_user
+      - if current_user || session[:new_nav]
         = render 'layouts/external/new_nav'
       - else
         = render 'layouts/external/old_nav'
