--- a/app/views/admin/bookings/_form.html.slim
+++ b/app/views/admin/bookings/_form.html.slim
@@ -76,7 +76,7 @@ coffee:
       attendee.find('.booking_attendees__destroy input').val(hidden)
 
     fill_invoice_address = (company_id) ->
-      $.getJSON "/companies/#{company_id}.json", (company) ->
+      $.getJSON "/admin/companies/#{company_id}.json", (company) ->
         title = company.name
         title = "#{title}\n#{company.name2}" if company.name2 isnt null
         $('.display-company-address').html "#{title}<br>#{company.street}<br>#{company.zip} #{company.city}"
