--- a/app/views/admin/seminars/_form.html.slim
+++ b/app/views/admin/seminars/_form.html.slim
@@ -8,23 +8,20 @@
         span.sr-only Close
       h4 = t('.error')
   div
-    ul.nav.nav-tabs role="tablist"
-      li.active role="presentation"
-        a aria-controls="home"     data-toggle="tab" href="#general" role="tab"  Allgemein
-      li role="presentation"
-        a aria-controls="settings" data-toggle="tab" href="#events"  role="tab"  Termine
-      li role="presentation"
-        a aria-controls="profile"  data-toggle="tab" href="#benefit" role="tab"  Nutzen
-      li role="presentation"
-        a aria-controls="messages" data-toggle="tab" href="#content" role="tab"  Inhalt
-      li role="presentation"
-        a aria-controls="settings" data-toggle="tab" href="#notes"   role="tab"  Bemerkungen
+    ul.nav.nav-tabs
+      li.active: a data-toggle="tab" href="#general"  Allgemein
+      li:        a data-toggle="tab" href="#events"   Termine
+      li:        a data-toggle="tab" href="#benefit"  Nutzen
+      li:        a data-toggle="tab" href="#content"  Inhalt
+      li:        a data-toggle="tab" href="#notes"    Bemerkungen
+      li:        a data-toggle="tab" href="#stats"    PRAS-Daten
     .tab-content
-      #general.tab-pane.active role="tabpanel" = render 'admin/seminars/form/general', f: f
-      #events.tab-pane         role="tabpanel" = render 'admin/seminars/form/events',  f: f
-      #benefit.tab-pane        role="tabpanel" = render 'admin/seminars/form/text',    f: f, field: :benefit
-      #content.tab-pane        role="tabpanel" = render 'admin/seminars/form/text',    f: f, field: :content
-      #notes.tab-pane          role="tabpanel" = render 'admin/seminars/form/text',    f: f, field: :notes
+      .tab-pane#general.active = render 'admin/seminars/form/general', f: f
+      .tab-pane#events         = render 'admin/seminars/form/events',  f: f
+      .tab-pane#benefit        = render 'admin/seminars/form/text',    f: f, field: :benefit
+      .tab-pane#content        = render 'admin/seminars/form/text',    f: f, field: :content
+      .tab-pane#notes          = render 'admin/seminars/form/text',    f: f, field: :notes
+      .tab-pane#stats          = render 'admin/seminars/form/stats',   f: f
 
   section.action-buttons
     .col-md-12
