--- a/app/views/admin/seminars/pras.html.slim
+++ b/app/views/admin/seminars/pras.html.slim
@@ -17,24 +17,6 @@ div
 
       - f.simple_fields_for :statistic, @seminar.statistic do |sf|
         .row
-          .col-md-8
-            .row
-              .col-md-6 = sf.input :number
-              .col-md-6 = sf.input :title
-              .col-md-6 = sf.input :section
-              .col-md-6 = sf.input :type
-              .col-md-6 = sf.input :published
-              .col-md-6 = sf.input :location
-              .col-md-6 = sf.input :start_date
-              .col-md-6 = sf.input :start_time
-              .col-md-6 = sf.input :end_date
-              .col-md-6 = sf.input :end_time
-              .col-md-6 = sf.input :hours, as: :integer
-              .col-md-6 = sf.input :partner
-              .col-md-6 = sf.input :certificate
-              .col-md-6 = sf.input :target_group
-              .col-md-6 = sf.input :not_local, as: :integer
-
           .col-md-4
             .table-responsive
               table.standard-table.ages
@@ -51,6 +33,13 @@ div
                       td = sf.input "age_#{range}_f", label: false, as: :integer, input_html: { class: 'f' }
                       td = sf.input "age_#{range}_m", label: false, as: :integer, input_html: { class: 'm' }
                       th.sum
+
+                  - AttendeeStatistic::AGE_RANGES_DEPR.each do |range|
+                    tr.text-muted
+                      th = t(".age_#{range}")
+                      td = @seminar.statistic.send "age_#{range}_f"
+                      td = @seminar.statistic.send "age_#{range}_m"
+                      th
                 tfoot
                   tr
                     th Gesamt
@@ -58,10 +47,10 @@ div
                     th.sum.m
                     th.sum.total
 
-        section.action-buttons
-          .col-md-12
-            .pull-right
-              = f.submit t(:save), class: 'btn btn-primary'
+            section.action-buttons
+              .col-md-12
+                .pull-right
+                  = f.submit t(:save), class: 'btn btn-primary'
 
 sass:
   input.integer, th.sum
