Info text "no reply email"

--- a/app/views/booking_mailer/booking_confirmation_email.html.slim
+++ b/app/views/booking_mailer/booking_confirmation_email.html.slim
@@ -21,6 +21,10 @@ table
       - if @booking.contact_mobile.present?
         p #{@booking.contact_mobile} (Mobil)
 
+p Dies ist eine automatisch generierte E-Mail. Bitte ANTWORTEN SIE NICHT auf diese Mail, da die
+  Antwort NICHT ZUGESTELLT werden kann.
+p Für Rückfragen erreichen Sie uns unter: bildungswerk@paritaet-lsa.de
+
 p Freundliche Grüße <br> PARITÄTISCHES Bildungswerk <br> (PBW)
 
 .address
