--- a/app/views/booking_mailer/booking_confirmation_email.text.erb
+++ b/app/views/booking_mailer/booking_confirmation_email.text.erb
@@ -6,6 +6,9 @@ hiermit bedanken wir uns für Ihre Anmeldung und übersenden Ihnen noch einmal z
 <%= Attendee.model_name.human(count: @booking.attendees.count) %>: <%= @booking.attendees.map(&:name).join(', ').html_safe %>
 Kontakt: <%= @booking.contact_email %>, <%= @booking.contact_phone %>, <%= @booking.contact_fax %> (Fax), <%= @booking.contact_mobile %> (Mobil)
 
+Dies ist eine automatisch generierte E-Mail. Bitte ANTWORTEN SIE NICHT auf diese Mail, da die Antwort NICHT ZUGESTELLT werden kann.
+Für Rückfragen erreichen Sie uns unter: bildungswerk@paritaet-lsa.de
+
 Freundliche Grüße
 PARITÄTISCHES Bildungswerk
 (PBW)
