--- a/app/views/admin/seminars/form/_general.html.slim
+++ b/app/views/admin/seminars/form/_general.html.slim
@@ -15,10 +15,9 @@
   .col-md-6 = f.association :teachers, input_html: { class: 'select2' }, collection: Teacher.order(:last_name)
   .col-md-6 = f.association :location, input_html: { class: 'select2' }, collection: Location.order(:name)
 
-- characters = strip_tags([f.object.content, f.object.benefit, f.object.notes].join).size
 .row
   .col-md-3 = f.input :price
-  .col-md-3 = f.input :printed_pages, hint: "Zeichen gesamt: #{characters}"
+  .col-md-3 = f.input :printed_pages, hint: "Zeichen gesamt: #{content_characters_for f.object}"
 = f.input :price_text, input_html: { class: 'editor' }
 = f.input :external_booking_address
 = f.input :key_words
