--- a/app/views/buchung/new.html.slim
+++ b/app/views/buchung/new.html.slim
@@ -68,7 +68,7 @@
             .col-md-6 = f.input :member_institution, label: t('.member_institution')
           .row
             .col-md-4 = f.input :graduate, label: t('.graduate')
-            .col-md-4 = f.input :school, collection:t('bookings.schools'), include_blank: false
+            .col-md-4 = f.input :school, collection: t('bookings.schools'), include_blank: false
             .col-md-4 = f.input :year
 
         fieldset
@@ -77,7 +77,8 @@
 
         fieldset
           legend AGB
-          = f.input :terms_of_service, as: :boolean, required: true, label: t('.terms_of_service')
+          = f.input :data_protection,  as: :boolean, required: true, label: raw(t('.data_protection'))
+          = f.input :terms_of_service, as: :boolean, required: true, label: raw(t('.terms_of_service'))
 
     .row.action-buttons
       .col-md-8 = f.submit 'Jetzt anmelden', class: 'btn btn-primary btn-block btn-lg'
