replace bootstrap wysihtml5 with tinyMCE

--- a/app/views/admin/pages/_form.html.slim
+++ b/app/views/admin/pages/_form.html.slim
@@ -9,8 +9,8 @@
   = f.input :title
   = f.input :slug
   = f.input :published
-  = f.input :teaser,  input_html: { class: 'editor' }
-  = f.input :content, input_html: { class: 'editor' }
+  = f.input :teaser,  input_html: { class: 'tinymce' }
+  = f.input :content, input_html: { class: 'tinymce' }
 
   section.action-buttons
     .col-md-12
