--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -5,6 +5,7 @@ html
     title = content_for?(:title) ? yield(:title) : 'Event Management'
     == stylesheet_link_tag 'admin', media: 'all', 'data-turbolinks-track' => true
     == javascript_include_tag 'admin', 'data-turbolinks-track' => true
+    == tinymce_assets
     == csrf_meta_tags
     == content_for :style
   body
