Revert "replace bootstrap wysihtml5 with tinyMCE"
revert theses commits:

commit 15e3b720b361014979fac608fe9d01394aa00715
    try to get tinymce running in production

commit 9847fa082dddfb625fad415b7c46657b186be03f
    add tinymce config

commit aa7c2822d3c19554359a220ff2df566206dc4c8d
    replace bootstrap wysihtml5 with tinyMCE

--- a/app/views/admin/locations/_form.html.slim
+++ b/app/views/admin/locations/_form.html.slim
@@ -10,7 +10,7 @@
     .col-md-6
       .form-inputs
         = f.input :name
-        = f.input :description, input_html: { class: 'tinymce' }
+        = f.input :description, input_html: { class: 'editor' }
         /= f.input :address
 
     .col-md-6
@@ -23,4 +23,3 @@
       .pull-right
         => link_to t(:cancel), 'javascript: window.history.back();', class: 'btn btn-default'
         = f.submit t(:save), class: 'btn btn-primary'
-= tinymce language: 'de', height: 200
