--- a/app/views/admin/seminars/form/_events.html.slim
+++ b/app/views/admin/seminars/form/_events.html.slim
@@ -1,4 +1,4 @@
-.form-inputs = f.input :date_text, input_html: { class: 'tinymce' }, label: false
+.form-inputs = f.input :date_text, input_html: { class: 'editor' }, label: false
 table.standard-table.events-table
   thead
     tr
