--- a/app/views/admin/legal_statistics/index.html.slim
+++ b/app/views/admin/legal_statistics/index.html.slim
@@ -31,10 +31,10 @@
           - LegalStatistic::AGE_RANGES.each do |range|
             td.int
               - num = stat.send("age_#{range}_f").tap { |count| sum += count }
-              span title='w' = num if num > 0
+              span class=('zero' if num.zero?) title='w' = num
               br
               - num = stat.send("age_#{range}_m").tap { |count| sum += count }
-              span title='m' = num if num > 0
+              span class=('zero' if num.zero?) title='m' = num
           th.int = sum
     tfoot = render 'table_head'
 
@@ -43,3 +43,5 @@
 sass:
   th.int, td.int
     text-align: right
+  span.zero
+    color: lightgray
