--- a/app/views/booking_mailer/booking_confirmation_email.html.slim
+++ b/app/views/booking_mailer/booking_confirmation_email.html.slim
@@ -1,3 +1,6 @@
+p:strong Dies ist eine automatisch generierte E-Mail. Bitte ANTWORTEN SIE NICHT auf diese Mail, da die
+  Antwort NICHT ZUGESTELLT werden kann.
+
 p Sehr geehrte Damen und Herren,
 
 p
@@ -20,9 +23,6 @@ table
         p #{@booking.contact_fax} (Fax)
       - if @booking.contact_mobile.present?
         p #{@booking.contact_mobile} (Mobil)
-
-p Dies ist eine automatisch generierte E-Mail. Bitte ANTWORTEN SIE NICHT auf diese Mail, da die
-  Antwort NICHT ZUGESTELLT werden kann.
 p Für Rückfragen erreichen Sie uns unter: bildungswerk@paritaet-lsa.de
 
 p Freundliche Grüße <br> PARITÄTISCHES Bildungswerk <br> (PBW)
