--- a/app/views/admin/seminars/category.html.slim
+++ b/app/views/admin/seminars/category.html.slim
@@ -1,4 +1,4 @@
-= render 'admin/seminars/index/header'
+= render 'admin/seminars/index/header', export_options: { category_id: @category.id }
 
 - current_path = (@category && @category.path).to_a
 .row
