--- a/app/views/admin/seminars/date.html.slim
+++ b/app/views/admin/seminars/date.html.slim
@@ -1,4 +1,4 @@
-= render 'admin/seminars/index/header'
+= render 'admin/seminars/index/header', export_options: { month: @month }
 
 .row
   .col-md-2
