--- a/app/views/admin/seminars/date.html.slim
+++ b/app/views/admin/seminars/date.html.slim
@@ -1,4 +1,4 @@
-= render 'admin/seminars/index/header', export_options: { month: @month }
+= render 'admin/seminars/index/header', export_path: date_admin_seminars_url(month: @month, format: :xlsx)
 
 .row
   .col-md-2
