filter seminars by number structure

--- a/app/views/admin/seminars/index/_header.html.slim
+++ b/app/views/admin/seminars/index/_header.html.slim
@@ -21,6 +21,7 @@ ul.nav.nav-tabs.seminar-views
   li class=('active' if params[:action] == 'date')     = link_to 'nach Monat',      date_admin_seminars_path
   li class=('active' if params[:action] == 'calendar') = link_to 'Kalender',    calendar_admin_seminars_path
   li class=('active' if params[:action] == 'canceled') = link_to 'Ausgefallen', canceled_admin_seminars_path
+  li class=('active' if params[:action] == 'filter')   = link_to 'Filter',        filter_admin_seminars_path
   - unless current_catalog.published
     li class=('active' if params[:action] == 'editing_status')
       = link_to 'Bearbeitungsstatus', editing_status_admin_seminars_path
