--- a/app/views/admin/legal_statistics/_table_head.html.slim
+++ b/app/views/admin/legal_statistics/_table_head.html.slim
@@ -1,23 +1,8 @@
 tr
-  th style='min-width: 120px' Nummer
-  th = LegalStatistic.human_attribute_name :topic
-  th = LegalStatistic.human_attribute_name :event_type
-  th = LegalStatistic.human_attribute_name :target_group
-  th = LegalStatistic.human_attribute_name :law_accepted
-  th = LegalStatistic.human_attribute_name :ebg
-  th = LegalStatistic.human_attribute_name :partner
-  th = LegalStatistic.human_attribute_name :zip
-  th = LegalStatistic.human_attribute_name :location
-  th = LegalStatistic.human_attribute_name :start_date
-  th = LegalStatistic.human_attribute_name :start_time
-  th = LegalStatistic.human_attribute_name :end_date
-  th = LegalStatistic.human_attribute_name :end_time
-  th = LegalStatistic.human_attribute_name :hours
-  - LegalStatistic::AGE_RANGES.each do |range|
-    th
-      = t("admin.seminars.pras.age_#{range}")
-      br
-      | w
-      br
-      | m
-  th Summe
+  - @report.header_names.each do |title, sub_titles|
+    th rowspan=(2 if sub_titles.size == 0) colspan=(sub_titles.size if sub_titles.size > 1)
+      = title
+tr
+  - @report.header_names.each do |title, sub_titles|
+    - sub_titles.each do |sub_title|
+      th = sub_title
