--- a/app/views/admin/search/index.html.slim
+++ b/app/views/admin/search/index.html.slim
@@ -1,13 +1,12 @@
 - content_for :title, t('.title')
 .page-header
-  h2 #{@result.count} Treffer für Suche nach "#{@query}"
+  h2 #{@result.values.flatten.count} Treffer für Suche nach "#{@query}"
 .row
-  - grouped_results = @result.compact.group_by(&:class)
-  - grouped_results.each do |model, results|
-    div class=("col-md-#{search_col_width(grouped_results.keys.size)}")
+  - @result.each do |model, results|
+    div class=("col-md-#{search_col_width(@result.keys.size)}")
       h4
-        => results.size
-        = model.model_name.human count: results.size
+        => results.count
+        = model.model_name.human count: results.count
 
       ul.list-group
         - results.each do |result|
@@ -15,4 +14,5 @@
             li.list-group-item class=('list-group-item-warning' if result.canceled?)
               = link_to display_name_for(result), admin_seminar_url(result.booking.seminar)
           - else
-            li.list-group-item = link_to display_name_for(result), [:admin, result]
+            li.list-group-item class=('list-group-item-danger' if result.is_a?(Seminar) && result.archived? )
+              = link_to display_name_for(result), [:admin, result]
